[package]
name = "discord-tauri"
version = "0.3.0"
description = "Discord, wrapped in Tauri."
authors = [ "DrPuc" ]
license = "GPLv3"
repository = "https://github.com/DiscordTauri/discord-tauri"
default-run = "discord-tauri"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.1.1", features = ["notification-all", "system-tray"] }
reqwest = { version = "0.11.4", features = ["blocking"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
