[package]
name = "discord-tauri"
version = "0.3.0"
description = "Discord, wrapped in Tauri."
authors = [ "DrPuc" ]
license = "GPLv3"
repository = "https://github.com/DiscordTauri/discord-tauri"
default-run = "discord-tauri"
edition = "2021"
build = "src/build.rs"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.2.2", features = ["notification-all", "system-tray"] }
reqwest = { version = "0.11.4", features = ["blocking"] }
window-shadows = "0.2.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
